--- a/style.css
+++ b/style.css
@@ -70,13 +70,13 @@ html{
     animation: TopSlide 1s ease forwards;
     animation-delay: calc(.2s * var(--vlr));
 }
-@keyframes  TopSlide{
-    0%{
+@keyframes TopSlide {
+    from {
         transform: translateY(-100px);
         opacity: 0;
     }
-    100%{
-        transform: translateY(0px);
+    to {
+        transform: translateY(0);
         opacity: 1;
     }
 }
@@ -128,12 +128,12 @@ section{
     display: inline-block; /* Pastikan tetap inline */
 }
 
-@keyframes textSlide{
-    0%,10%,100%{
-        background-position: -33rem 0;
+@keyframes textSlide {
+    0% {
+        background-position: 200% 0;
     }
-    65%,85%{
-        background-position: 0 0;
+    100% {
+        background-position: -200% 0;
     }
 }
 .text-animation::before{
