--- a/style.css
+++ b/style.css
@@ -626,18 +626,21 @@ section.start-animation .skill-box2{
     width: 90%;
 }
 .bar-2{
-    width: 80%;
+    width: 90%;
 }
 .bar-3{
-    width: 70%;
+    width: 80%;
 }
 .bar-4{
-    width: 90%;
+    width: 70%;
 }
 .bar-5{
     width: 90%;
 }
 .bar-6{
+    width: 90%;
+}
+.bar-7{
     width: 90%;
 }
 /* contact section */
