--- a/style.css
+++ b/style.css
@@ -632,7 +632,7 @@ section.start-animation .skill-box2{
     width: 80%;
 }
 .bar-4{
-    width: 70%;
+    width: 80%;
 }
 .bar-5{
     width: 90%;
@@ -641,7 +641,13 @@ section.start-animation .skill-box2{
     width: 90%;
 }
 .bar-7{
-    width: 90%;
+    width: 95%;
+}
+.bar-8{
+    width: 95%;
+}
+.bar-9{
+    width: 95%;
 }
 /* contact section */
 .contact {
